# #############################################################################
# subdirectory ================================================================
# -----------------------------------------------------------------------------

# =============================================================================
# snapkit  --------------------------------------------------------------------
file(RELATIVE_PATH SNAPKIT_INCLUDE_SNAPKIT_DEST
  ${abs_top_srcdir} ${CMAKE_CURRENT_SOURCE_DIR})
install(FILES
  call.h
  declspec.h
  begin.h
  DESTINATION ${SNAPKIT_INCLUDE_SNAPKIT_DEST})
